--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap tests/*.js"
   },
   "keywords": [
     "nes",
@@ -21,7 +21,9 @@
   "dependencies": {
     "through": "~2.3.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tap": "^0.4.11"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:emkay/nesly-split.git"
